@@ -110,6 +110,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId><artifactId>maven-surefire-plugin</artifactId>
         <configuration>
+          <argLine>@{argLine} -XX:+EnableDynamicAgentLoading</argLine>
           <groups>${test.groups}</groups>
           <excludedGroups>${test.excludedGroups}</excludedGroups>
         </configuration>
